@@ -32,12 +32,14 @@ keywords = ['append',
             'enter',
             'extract',
             'fail',
+            'false',
             'from',
             'if',
             'into',
             'loop',
             'try',
             'to',
+            'true',
             'until',
             'when',
             'while']
