@@ -1,5 +1,5 @@
-def execute(scope, data, wait = None):
+def execute(scope, data):
     conn = scope.get('_connection')
     for line in data:
-        conn.send(line)
+        conn.send(line + '\r')
     return 1
