@@ -1,3 +1,12 @@
+2008-06-26 Samuel Abels <http://debain.org>
+
+	* src/Exscript/Interpreter/stdlib/Connection/*.py: Renamed send() to exec().
+	Replaced old send() function by a function that does not wait for a prompt 
+	after sending the data. Added sendline() and execline() equivalents that
+	automatically append a newline character.
+	* src/Exscript/Interpreter/Code.py, src/Exscript/Interpreter/Term.py: Add
+	support for bool types using the "true" and "false" keywords.
+
 2008-06-25 Samuel Abels <http://debain.org>
 
 	* exscript, src/Exscript/Exscript.py: Fix: Passed in variable names were 
